# tini

./: .gitignore  .travis.yml  README.md  tini.cabal
Data/: Tini.hs
Data/Tini/: Configurable.hs  IniValue.hs  Ops.hs  Parser.hs  Rename.hs  Types.hs  Utils.hs
test/: Generators.hs  run-tests.hs
